<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cpp_subscriber</name>
  <version>0.0.0</version>
  <description>Workshop example of subscriber using rclcpp</description>
  <maintainer email="bjornrho@stud.ntnu.no">bjornar</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <!-- Declaring dependencies corresponding to node's include statements -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
